--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,6 @@ jobs:
         with:
           submodules: recursive
       - name: run docker
-        uses: docker://nlhomme/archiso-builder:latest
+        runs:
+          using: 'docker'
+          image: 'Dockerfile'
