--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,12 @@ on:
       - README.md
       - .gitignore
 
-runs:
-  using: 'docker'
-  image: 'Dockerfile'
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - name: run docker container
+        uses: 'Dockerfile'
