WIP: Test docker

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           submodules: recursive
       - name: run docker container
-        uses: 'Dockerfile'
+        uses: docker://archlinux:latest
