--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,5 +19,5 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: run docker container
+      - name: Run Docker Container
         uses: ./
