WIP: Test docker

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Install Docker
+        run:  curl -fsSL https://test.docker.com -o test-docker.sh & sudo sh test-docker.sh
       - uses: actions/checkout@v2
         with:
           submodules: recursive
       - name: Run Docker Container
-        uses: ./
+        run: ./local.sh
