--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,11 +6,13 @@ on:
     paths-ignore:
       - README.md
       - .gitignore
+      - LICENSE
   pull_request:
     branches: [ main ]
     paths-ignore:
       - README.md
       - .gitignore
+      - LICENSE
 
 jobs:
   build:
